[package]
name = "q11"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6", features = ["tracing"] }
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.14.0"


